elk-kinesis-and-nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 6
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      serviceAccountName: nginx-sa
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
            limits:
              cpu: "500m"
          volumeMounts:
            - mountPath: /etc/nginx
              readOnly: true
              name: nginx-conf
            - name: log
              mountPath: /var/log
        - name: app
          image: <APPLICATION IMAGE URI>
          imagePullPolicy: Always
        - name: fluent-bit
          image: public.ecr.aws/aws-observability/aws-for-fluent-bit:2.28.3
          volumeMounts:
            - name: fluentbit-conf
              mountPath: /fluent-bit/etc
            - name: log
              mountPath: /var/log
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
        - name: fluentbit-conf
          configMap:
            name: fluentbit-conf
        - name: log
