elk-kinesis-and-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
spec:
  selector:
    app: app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort : 80 # container port
